fix: prevent title from being cutoff by menu

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -1,5 +1,5 @@
 .main {
-  margin-top: 6rem;
+  margin-top: 5rem;
   display: grid;
   grid-template-areas:
     "header"
@@ -156,4 +156,11 @@
   max-width: 100%;
   min-width: 100%;
   aspect-ratio: 1;
+}
+
+
+@media only screen and (max-width: 500px) {
+  .main {
+    margin-top: 11vh;
+  }
 }
